<resources>
    <!-- Common string -->
    <string name="app_name">Mẹ và Bé</string>
    <string name="facebook_app_id">1804512209790865</string>


    <string name="ok">OK</string>
    <string name="add">Thêm mới</string>
    <string name="cancel">Đóng</string>
    <string name="delete">Xoá</string>
    <string name="start">Bắt đầu</string>
    <string name="settings">Thiết lập</string>
    <string name="all">Tất cả</string>
    <string name="more_info">MORE</string>
    <string name="no_setting">Chưa thiết lập</string>

    <string name="connect_no_internet">Không có kết nối internet</string>
    <string name="connect_server_fail">Kết nối đến máy chủ thất bại</string>
    <string name="back_to_exit">Nhấn nút BACK 2 lần để thoát ứng dụng</string>
    <string name="login_message">Hãy đăng nhập để sử dụng tính năng này</string>
    <string name="empty_child">Cập nhật ngay thông tin của bé để sử dụng nhiều chức năng thú vị bạn nhé ^^</string>
    <string name="empty_data">NO DATA</string>

    <!-- Menu string  -->
    <string name="left_menu_dashboard">Mẹ và bé</string>
    <string name="left_menu_lich_tiem">Tiêm phòng</string>
    <string name="left_menu_kien_thuc">Kiến thức chăm sóc con</string>
    <string name="left_menu_bac_sy">Tìm bác sỹ</string>
    <string name="left_menu_profile">Profile</string>

    <!-- Profile Screen -->
    <string name="child_name">Tên bé:</string>
    <string name="child_date_of_birth">Ngày sinh:</string>
    <string name="child_gender">Giới tính:</string>
    <string name="child_gender_male">Nam</string>
    <string name="child_gender_female">Nữ</string>
    <string name="child_years">&#160;tuổi</string>
    <string name="child_months">&#160;tháng</string>
    <string name="child_days">&#160;ngày</string>
    <string name="child_info">Thông tin của bé</string>
    <string name="child_delete_confirm">Bạn muốn xoá thông tin của bé "%s"\n(Chú ý: thông tin về lịch tiêm phòng của bé
        cũng sẽ được xoá theo)
    </string>


    <!-- Vaccinations Screen -->
    <string name="vaccinations_sub_header_plan">Chọn lịch tiêm</string>
    <string name="vaccinations_sub_header_history">Lịch tiêm phòng</string>
    <string name="vaccinations_name">Vaccine: %s</string>
    <string name="vaccinations_period">Độ tuổi: %s</string>

    <string name="vaccinations_injection_na">Ngày nữa</string>
    <string name="vaccinations_injection_ok">Đã tiêm</string>
    <string name="vaccinations_injection_over">Bỏ lỡ</string>
    <string name="vaccinations_injection_date">Ngày tiêm: %1$s</string>

    <string name="vaccinations_add_screen_title">Tạo lịch tiêm cho bé</string>
    <string name="vaccinations_add_in_date_title">Ngày tiêm</string>
    <string name="vaccinations_add_in_date_button">Chọn luôn</string>
    <string name="vaccinations_add_in_place">Nơi tiêm</string>
    <string name="vaccinations_add_in_place_hint">Trung tâm y tế</string>
    <string name="vaccinations_add_in_note">Ghi chú</string>
    <string name="vaccinations_add_in_note_hint">Thông tin cần chú ý</string>
    <string name="vaccinations_add_successful">Tạo lịch tiêm cho bé thành công</string>
    <string name="vaccinations_add_fail">Tạo lịch tiêm cho bé thất bại</string>

    <string name="vaccinations_edit_screen_title">Cập nhật lịch tiêm cho bé</string>
    <string name="vaccinations_edit_successful">Cập nhật lịch tiêm cho bé thành công</string>
    <string name="vaccinations_edit_fail">Cập nhật lịch tiêm cho bé thất bại</string>


    <!-- Doctors Screen -->
    <string name="doctors_sub_header_search">Tìm bác sỹ</string>
    <string name="doctors_sub_header_favorite">Yêu thích</string>
    <string name="doctors_filter_title">Thiết lập điều kiện tìm kiếm</string>
    <string name="doctors_filter_location">Khu vực: %1$s\n%2$s
    </string>
    <string name="doctors_filter_specialization">Chuyên khoa:\n%1$s
    </string>

    <string name="doctors_filter_location_province">Tỉnh/Thành phố</string>
    <string name="doctors_filter_location_district">Quận huyện</string>
</resources>