<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="15dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Child name -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_name"/>

            <EditText
                android:id="@+id/child_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"
                android:minWidth="300dp"/>
        </TableRow>

        <!-- Date of birth -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_date_of_birth"/>

            <Button
                android:id="@+id/child_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <!-- Gender -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_gender"/>

            <ToggleButton
                android:id="@+id/child_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/dialog_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            />
    </LinearLayout>
</LinearLayout>